--- a/css/capacitancia.css
+++ b/css/capacitancia.css
@@ -1,3 +1,6 @@
+.container{
+    height: 100vh;
+}
 /*HEADER*/
 #header{
     margin: 0px;
@@ -13,7 +16,8 @@
     padding-top: 0.5%;
 }
 #home img{
-    height: 60%;
+    height: 50px;
+    width: 50px;
 }
 #home img:hover{
     border: 1px solid white;
