--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ body{
 .tarjeta{
     background-color: black;
     margin-top: 10%;
-    height: 14em;   
+    height: 16em;   
 }
 .tarejtaHead{
     background-color: rgb(8, 8, 8);
@@ -50,8 +50,6 @@ body{
 }
 #tarjh4{
     border-bottom: 1px solid rgb(10, 205, 85);
-    padding-top: 20px;
-    padding-bottom: 18px;
 }
 #tarj4:hover{
     box-shadow: 1px 5px 20px rgb(10, 205, 85); 
@@ -61,6 +59,9 @@ body{
     text-align: center;
 }
 .tarjimg{
-    height: 100px;
+    height: 150px;
     width: 100%;
+}
+#tarj4 img{
+    width: 80%;
 }
