--- a/css/capacitancia.css
+++ b/css/capacitancia.css
@@ -78,3 +78,9 @@ width: 100%;
 .formula{
     width: 50%;
 }
+
+#footer{
+    height: 12%;
+    border: 1px solid rgb(0, 60, 255);
+    color: white;
+}
