--- a/css/index.css
+++ b/css/index.css
@@ -3,12 +3,15 @@ body{
     background-color: black;
     font-family: 'Oswald', sans-serif;
 }
+#pag{
+    height: 100vh;
+}
 
-.header{
+#header{
     text-align: center;
-    
+
     color: white;
-    height: 5em;
+    height: 12%;
     padding-top: 0.5em;
     border: 1px solid red;
     box-shadow: 1px 5px 20px red; 
@@ -29,6 +32,7 @@ body{
 #cuerpo{
     margin-left: 5%;
     margin-right: 5%;
+    height: 76%;
 }
 #tarjh1{
     border-bottom: 1px solid rgb(246, 243, 243);
@@ -64,4 +68,9 @@ body{
 }
 #tarj4 img{
     width: 80%;
+}
+#footer{
+    height: 12%;
+    border: 1px solid red;
+    color: white;
 }
